# FrankensteinBank

./: frankenapp.py  frankenbook.ipynb  frankengen.py  hello.py  pyproject.toml
f_templates/: citibank_disclosures.html  citibank_summary.html
f_templates/chase/: chase_balance.html
f_templates/citibank/: citibank_balance.html
f_templates/wellsfargo/: wells_disclosures.html
frankenstein/: base_template.html  chase_front_page.html  citibank_front_page.html  wells_front_page.html
frankenstein_version/: frankenapp.py  frankengen.py
frankenstein_version/frankenstein/: chase_summary.html  pnc_disclosures.html  pnc_front_page.html  wells_summary.html
super/: book_multimodal.ipynb
super/templates/: pnc_template_Capture.html
test/chase/: chase_disclosures.html
test/pnc/: pnc_balance.html  pnc_summary.html
